# ynab-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  pytest.ini  test.sh
src/ynab_mcp/: __init__.py  client.py  server.py
tests/: conftest.py  integration_test.py  test_accounts.py  test_budgets.py  test_categories.py  test_transactions.py
