[project]
name = "ynab-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Trey Moen", email = "trey@moen.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ynab-mcp = "ynab_mcp.server:mcp.run"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
